--- a/src/styles/Card.css
+++ b/src/styles/Card.css
@@ -13,7 +13,7 @@
 
 @media (min-width: 800px) {
     .page-content {
-        grid-template-columns: repeat(2, 1fr);
+        grid-template-columns: repeat(4, 1fr);
     }
 }
 
@@ -24,13 +24,14 @@
     overflow: hidden;
     padding: 1rem;
     width: 100%;
+    height: 86vh;
     text-align: center;
     color: whitesmoke;
     background-color: whitesmoke;
     box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1), 0 2px 2px rgba(0, 0, 0, 0.1), 0 4px 4px rgba(0, 0, 0, 0.1), 0 8px 8px rgba(0, 0, 0, 0.1), 0 16px 16px rgba(0, 0, 0, 0.1);
 }
 
-@media (max-height: 731px) {
+/* @media (max-height: 731px) {
     .card {
         height: 300px
     }
@@ -40,7 +41,7 @@
     .card {
         height: 265px
     }
-}
+} */
 
 
 .card:before {
