--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -1,107 +1,112 @@
 .navbar__link {
-  cursor: pointer;
-  text-decoration: none;
-  letter-spacing: .3em;
-  text-indent: .3em;
-  color: #181818;
-  border-bottom: 3px solid transparent;
+    cursor: pointer;
+    color: #fff;
+    border-bottom: 5px solid transparent;
 }
 
 .navbar__link:hover {
-  transform: translateY(-2px);
+    /* transform: translateY(-2px); */
 }
 
 .navbar__link--active {
-  border-bottom: 3px solid #29b6f6;
-  transition: border-bottom .5s ease-in-out;
-  color: #efefef;
+    border-bottom: 6px solid #F4FC29;
+    /* transition: border-bottom .5s ease-in-out; */
 }
+
 .nav {
-  font-family: 'Roboto', sans-serif;
-  height: 50px;
-  width: 100%;
-  background-color: #4d4d4d;
-  position: relative;
+    font-family: var(--font-noto);
+    height: 55px;
+    width: 100%;
+    background-color: #131923;
+    position: relative;
+    z-index: 20;
+}
+
+.nav--home {
+    background-color: transparent;
 }
 
 .nav>.nav-header {
-  display: inline;
+    display: inline;
 }
 
 .nav>.nav-header>.nav-title {
-  display: inline-block;
-  font-size: 22px;
-  color: #fff;
-  padding: 10px 10px 10px 10px;
+    display: inline-block;
+    font-size: 30px;
+    color: #fff;
+    margin-left: 35px;
+    padding: 7px 0px 10px 0px;
 }
 
 .nav>.nav-btn {
-  display: none;
+    display: none;
+    margin-right: 20px;
 }
 
 .nav>.nav-links {
-  display: inline;
-  float: right;
-  font-size: 18px;
+    display: inline;
+    float: right;
+    font-size: 18px;
 }
 
 .nav>.nav-links>a {
-  display: inline-block;
-  padding: 13px 35px 10px 35px;
-  text-decoration: none;
+    display: inline-block;
+    padding: 8px 35px 8px 35px;
+    text-decoration: none;
+    font-size: 25px;
 }
 
 .nav>.nav-links>a:hover {
-  background-color: rgba(0, 0, 0, 0.3);
+    background-color: rgba(0, 0, 0, 0.3);
 }
 
 .nav>#nav-check {
-  display: none;
+    display: none;
 }
 
-@media (max-width:600px) {
-  .nav>.nav-btn {
-      display: inline-block;
-      position: absolute;
-      right: 0px;
-      top: 0px;
-  }
-  .nav>.nav-btn>label {
-      display: inline-block;
-      width: 50px;
-      height: 50px;
-      padding: 13px;
-  }
-  .nav>.nav-btn>label:hover,
-  .nav #nav-check:checked~.nav-btn>label {
-      background-color: rgba(0, 0, 0, 0.3);
-  }
-  .nav>.nav-btn>label>span {
-      display: block;
-      width: 25px;
-      height: 10px;
-      border-top: 2px solid #eee;
-  }
-  .nav>.nav-links {
-      position: absolute;
-      display: block;
-      width: 100%;
-      background-color: #333;
-      height: 0px;
-      transition: all 0.3s ease-in;
-      overflow-y: hidden;
-      top: 50px;
-      left: 0px;
-  }
-  .nav>.nav-links>a {
-      display: block;
-      width: 100%;
-  }
-  .nav>#nav-check:not(:checked)~.nav-links {
-      height: 0px;
-  }
-  .nav>#nav-check:checked~.nav-links {
-      height: calc(100vh - 50px);
-      overflow-y: auto;
-  }
+@media (max-width:680px) {
+    .nav>.nav-btn {
+        display: inline-block;
+        position: absolute;
+        right: 0px;
+        top: 0px;
+    }
+    .nav>.nav-btn>label {
+        display: inline-block;
+        width: 50px;
+        height: 50px;
+        padding: 13px;
+    }
+    .nav>.nav-btn>label:hover,
+    .nav #nav-check:checked~.nav-btn>label {
+        background-color: rgba(0, 0, 0, 0.3);
+    }
+    .nav>.nav-btn>label>span {
+        display: block;
+        width: 25px;
+        height: 10px;
+        border-top: 2px solid #eee;
+    }
+    .nav>.nav-links {
+        position: absolute;
+        display: block;
+        width: 100%;
+        background-color: #333;
+        height: 0px;
+        transition: all 0.3s ease-in;
+        overflow-y: hidden;
+        top: 50px;
+        left: 0px;
+    }
+    .nav>.nav-links>a {
+        display: block;
+        width: 100%;
+    }
+    .nav>#nav-check:not(:checked)~.nav-links {
+        height: 0px;
+    }
+    .nav>#nav-check:checked~.nav-links {
+        height: calc(100vh - 50px);
+        overflow-y: auto;
+    }
 }
