--- a/src/styles/Launches.css
+++ b/src/styles/Launches.css
@@ -3,50 +3,96 @@ table {
   width: 100%;
   font-family: var(--font-noto);
   color: var(--cl2);
-  padding: 50px;
 }
 .tableOutput{
   padding-top: 0;
   text-align: center;
-  
+  padding: 0 50px 20px;
 }
 th, td {
   padding: 8px;
   /* text-align: left;
    */
 }
-td{
+.tableOutput td{
   border-bottom: 1px solid var(--cl2);
 }
 th {
   background-color: var(--cl4);
-  border-radius: 5%;
+  border-radius: 5px;
 }
 .trhover:hover {
   background-color: rgba(244, 252, 41, 0.2);
 }
 
+
+.tableInput{
+  display: flex;
+  justify-content: center;
+  margin: 10px;
+  padding: 10px 50px;
+  font-family: var(--font-noto);
+}
 select {
   display: flex;
   align-items: center;
   width: 150px;
-  margin: 0 10px 10px 0;
+  /* margin: 0 10px 10px 0; */
   padding: .25em;
   border: 0;
   border-bottom: 3px solid var(--cl4); 
   letter-spacing: .15em;
-  border-radius: 0;
+  border-radius: 5px;
   color: var(--cl2);
-  /* &:focus, &:active {
-    outline: 0;
-    border-bottom-color: red;
-  } */
-}
-form{
-  display: flex;
-  padding: 50px;
-  margin: 10px;
+  font-family: var(--font-noto);
 }
 input{
+  display: flex;
   margin-right: 10px;
+  border: 0;
+  border-bottom: 3px solid var(--cl4);
+  letter-spacing: .15em;
+  padding: .25em;
+  font-family: var(--font-noto);
+}
+label{
+  font-family: var(--font-noto);
+  font-size: 12px;
+  font-weight: bold;
+
+}
+
+.page button{
+  align-items: center;
+  border: 0;
+  background-color: white;
+  margin: 1%;
+  cursor: pointer;
+}
+.page div{
+  justify-content: center;
+  display: flex;
+  align-items: center;
+}
+
+input[type="submit"]{
+  display: block;
+  background-color: var(--cl2);
+  border: 0;
+  color: var(--cl3);
+  width: 100%;
+  height: 40px;
+  border-radius: 5px;
+  font-family: var(--font-noto);
+}
+input[type="submit"]:hover{
+  background-color: var(--cl3);
+  border: 3px solid var(--cl2);
+  color: var(--cl2);
+  width: 100%;
+  height: 40px;
+  border-radius: 5px;
+  font-family: var(--font-noto);
+  font-weight: bold;
+  transition: 0.3s;
 }
