--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -12,12 +12,12 @@
 }
 
 .navbar__link:hover {
-    /* transform: translateY(-2px); */
+    transform: translateY(-2px);
 }
 
 .navbar__link--active {
     border-bottom: 6px solid #F4FC29;
-    /* transition: border-bottom .5s ease-in-out; */
+    transition: border-bottom .5s ease-in-out;
 }
 
 .nav {
