--- a/src/styles/Loading.css
+++ b/src/styles/Loading.css
@@ -9,10 +9,10 @@
     -moz-animation: rotation .6s infinite linear;
     -o-animation: rotation .6s infinite linear;
     animation: rotation .6s infinite linear;
-    border-left:6px solid rgba(0,174,239,.15);
-    border-right:6px solid rgba(0,174,239,.15);
-    border-bottom:6px solid rgba(0,174,239,.15);
-    border-top:6px solid rgba(0,174,239,.8);
+    border-left:6px solid rgba(235, 239, 0, 0.1);
+    border-right:6px solid rgba(235, 239, 0, 0.15);
+    border-bottom:6px solid rgba(235, 239, 0,.2);
+    border-top:6px solid rgba(235, 239, 0, 0.3);
     border-radius:100%;
  }
  
