--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -11,9 +11,9 @@
     border-bottom: 5px solid transparent;
 }
 
-.navbar__link:hover {
+/* .navbar__link:hover {
     transform: translateY(-2px);
-}
+} */
 
 .navbar__link--active {
     border-bottom: 6px solid #F4FC29;
