--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,10 @@
     /* --font-sans: 'Roboto', sans-serif;
     --font-serif: 'Roboto', sans-serif; */
     --font-noto: 'Noto Sans';
+    --cl1: #1b1e32;
+    --cl2: #131923;
+    --cl3: #ffffff;
+    --cl4: #f4fc29;
 }
 
 * {
@@ -18,6 +22,7 @@ body {
 
 ._main {
   font-family: var(--font-noto);
+  text-shadow: ;
 }
 .f-5 {
   font-size: 20px;
