--- a/src/styles/Launches.css
+++ b/src/styles/Launches.css
@@ -74,25 +74,10 @@ label{
   display: flex;
   align-items: center;
 }
-
-input[type="submit"]{
-  display: block;
-  background-color: var(--cl2);
+.page button:hover{
+  align-items: center;
   border: 0;
-  color: var(--cl3);
-  width: 100%;
-  height: 40px;
-  border-radius: 5px;
-  font-family: var(--font-noto);
-}
-input[type="submit"]:hover{
-  background-color: var(--cl3);
-  border: 3px solid var(--cl2);
-  color: var(--cl2);
-  width: 100%;
-  height: 40px;
-  border-radius: 5px;
-  font-family: var(--font-noto);
-  font-weight: bold;
-  transition: 0.3s;
+  background-color: white;
+  margin: 1%;
+  cursor: pointer;
 }
